--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -4,13 +4,87 @@
   box-sizing: border-box;
 }
 
-header{
-    width: 100%;
-    height: 60px;
-    background-color: #000000;
-    color: #fff;
+header {
+  width: 100%;
+  height: 60px;
+  background-color: #000000;
+  color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000; /* upar hi rahe sab elements se */
 }
 
-.container{
-    
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.logo {
+  font-size: 28px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.nav-bar ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.nav-bar a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  display: inline-block;   
+  transition: transform 0.6s ease, text_shadow 0.6s ease;
+}
+
+.nav-bar a:hover {
+  transform: scale(1.1);   
+  text-shadow: 3px -3px 6px #ffffff;          
+}
+
+body {
+  padding-top: 60px; 
+  background: #191919;
+}
+
+
+/* Hero section */
+.home {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+  flex-direction: column;
+}
+
+.text-box h2 {
+  font-size: 28px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.text-box h1 {
+  font-size: 50px;
+  margin-bottom: 15px;
+}
+
+.text-box p {
+  font-size: 18px;
+  margin-bottom: 25px;
+}
+
+.image img{
+    height: 500px;
+    width: 500px;
+    border-radius: 50%;
 }
