--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,19 +1,9 @@
-.about {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #191919;
-}
-
 .about-box {
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;  /* vertically center */
-    align-items: center;      /* horizontally center */
-    gap: 30px;                /* h1 aur box ke beech thoda space */
+    align-items: center;   
 }
 
 .about-box h1 {
@@ -41,8 +31,9 @@
 }
 
 .about-me {
-    min-width: 1200px;
-    min-height: 600px;       /* fix height instead of 90% */
+    height: 100%;  
+    width: 80%;  
+    font-size: 35px;  /* fix height instead of 90% */
     border: 2px solid #fff;
     padding: 20px;
     color: #fff;
