--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 /* Hero section */
 .home {
     height: 100vh;
@@ -28,18 +31,18 @@
 }
 
 .text-box h2 {
-    font-size: 28px;
+    font-size: 30px;
     font-weight: 400;
     margin-bottom: 10px;
 }
 
 .text-box h1 {
-    font-size: 50px;
+    font-size: 60px;
     margin-bottom: 15px;
 }
 
 .text-box p {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 25px;
 }
 
