Now, working on Skills section.

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -16,7 +16,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000; /* upar hi rahe sab elements se */
+  z-index: 1000; 
 }
 
 .container {
