--- a/src/css/about.css
+++ b/src/css/about.css
@@ -20,6 +20,7 @@ html {
 .about-box h1 {
   font-size: 80px;
   font-weight: bold;
+  font-family: arial;
   color: transparent;
   -webkit-text-stroke: 2px white;
   background: linear-gradient(white, white) no-repeat;
@@ -28,13 +29,13 @@ html {
   background-size: 0% 100%;
   animation: fill-text linear;
   animation-timeline: view();
-  animation-range: entry 0% cover 91%;
+  animation-range: entry 10% cover 92%;
   animation-fill-mode: none; 
 }
 
 @keyframes fill-text {
   from {
-    background-size: 0% 100%;
+    background-size: 10% 100%;
   }
   to {
     background-size: 100% 100%;
