--- a/src/css/about.css
+++ b/src/css/about.css
@@ -45,6 +45,7 @@ html {
 .about-empty {
   height: 90%;
   width: 90%;
+  border-radius: 30px;
   border: 2px solid white;
   box-shadow: inset 0 0 15px rgba(255, 255, 255, 0.5);
   display: flex;
@@ -59,7 +60,7 @@ html {
 }
 
 .about-me {
-  font-size: 35px;
+  font-size: 39px;
   color: #fff;
   max-width: 100%;
   text-align: center;
